# email_auto

./: .gitignore  .pyre_configuration  CODEBASE_ANALYSIS.md  COMMANDS.md  QUICKSTART.md  README.md  RESPONSE_AGENT_ACTIVATION.md  debug_full_pipeline.py  debug_labels.py  debug_orchestrator_pipeline.py  debug_polling_loop.py  docker-compose.yml  fixdeploy.py  init_db.py  main.py  patch_mcp_server.py  patch_tools_email.py  requirements.txt  run_commands.ps1  run_mcp_server.py  start_mlflow.py  test_label_system.py  test_mlflow.py  test_overhead.py  test_phase3.py  test_response_agent.py  test_supabase.py  test_unknown_tenant.py
agents/: agent_metrics.py  audit_agent.py  (+8 more)
enterprise-mcp-server/: .env.example  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  refactor_imports.py  run_server.bat
enterprise-mcp-server/alembic/: env.py
enterprise-mcp-server/alembic/versions/: 001_create_security_tables.py
enterprise-mcp-server/app/: __init__.py
enterprise-mcp-server/app/api/: main.py
enterprise-mcp-server/app/api/dependencies/: session.py
enterprise-mcp-server/app/core/: celery_app.py  config.py  exceptions.py  health_checks.py  job_queue.py  logging.py  metrics.py  worker.py
enterprise-mcp-server/app/infrastructure/: __init__.py
enterprise-mcp-server/app/models/: mlflow_schemas.py  schemas.py
enterprise-mcp-server/app/services/: mlflow_service.py
enterprise-mcp-server/app/utils/: correlation_id.py
enterprise-mcp-server/requirements/: base.txt  development.txt  production.txt
enterprise-mcp-server/scripts/: create_api_key.py
(+105 files in other folders)
